--- a/Capitulos/cap1.tex
+++ b/Capitulos/cap1.tex
@@ -1,4 +1,4 @@
-	\chapter{Orientaciones generales}
+\chapter{Orientaciones generales}
 
 Este capítulo inicia indagando, un poco, sobre las perspectivas que dieron origen a la mecánica estadística,y finalizando, se presenta de manera sucinta, la propuesta dada por E.T Jaynes. A  partir  de un recorrido histórico, con el fin de ubicar el nacimiento de la mecánica estadística en un contexto natural, posteriormente , se explora los puntos de vista de Gibbs y Boltzmann de manera explícita; señalando las dificultades que trae consigo cada propuesta; así mismo, exponer qué implicaciones tiene la hipótesis de ergodicidad; para finalizar este capítulo, se evidenciará una propuesta más actual entregada por E.T Jaynes.
 
@@ -292,7 +292,7 @@ Como $\overline{f}$ es independiente de $P$ y constante sobre  todo el espacio d
 \langle f \rangle = \overline{f}.
 \end{equation}
 Aquí se ha mostrado por qué es válido el uso del promedio de ensamble en vez del temporal. Para esta demostración se ha usado dos suposiciones. Primero que  $\overline{f}(P)$ tiene el mismo valor para cualquier $P$ en la misma trayectoria que este punto traza, lo que llama \cite{Ehrenfest} el G-Path. Birkhoff demostró esta aseveración \cite{Birkhoff}. El problema es saber si $\overline{f}(P)$  tiene un valor definido independiente de la condición inicial $P$ y si esto se satisface para $P$ en cualquier G-path. \\
-Según M. Toda et al en su libro \cite{TodaStat}, Boltzmann propuso que para satisfacer la igualdad \ref{ergodicidad}, el G-path debe pasar por todos los puntos de la superficie de energía. Como la trayectoria del punto pasa por todos los puntos dado suficiente tiempo, el promedio temporal es igual al promedio de ensamble. Esto es lo que Boltzmann llamó la hipótesis de ergodicidad, esta idea sobre la trayectoria del punto $P$ es llamado la condición de ergodicidad en el sentido de Boltzmann.
+Según M. Toda \textit{et al} en su libro \cite{TodaStat}, Boltzmann propuso que para satisfacer la igualdad \ref{ergodicidad}, el G-path debe pasar por todos los puntos de la superficie de energía. Como la trayectoria del punto pasa por todos los puntos dado suficiente tiempo, el promedio temporal es igual al promedio de ensamble. Esto es lo que Boltzmann llamó la hipótesis de ergodicidad, esta idea sobre la trayectoria del punto $P$ es llamado la condición de ergodicidad en el sentido de Boltzmann.
 \\ 
 Como la trayectoria dinámica es un conjunto unidimensinal de puntos continuos y nunca se intersecta así misma en un superficia multidimensional constante de energía, hace imposible una correspondencia uno a uno de un espacio de dimensión dos o mayor a un espacio unidimensional, luego la ergodicidad en el sentido de Boltzmann no puede concebirse. Ergodicidad, la igualdad \ref{ergodicidad}, no siempre implica ergodicidad en el sentido de Boltzmann.
 \\
