--- a/Capitulos/introduccion.tex
+++ b/Capitulos/introduccion.tex
@@ -13,7 +13,7 @@ Por otra parte, los planteamientos igualmente presentados por los mismos autores
 \\
 Desde este horizonte de sentido, en el presente trabajo, se realizará una revisión crítica del estado del arte de las ideas modernas que han dado lugar a una reformulación de los fundamentos estadísticos de la termodinámica a partir de las herramientas que proporciona la teoría de la información cuántica; así mismo, se consideran algunos ejemplos de aplicaciones de estas formulaciones a sistemas lejos del equilibrio.
 \\
-En este sentido, se trata de vislumbrar las ideas sobre la esencia de la formulación estadística según la tipicidad canónica de estados cuánticos de espacios  de Hilbert  de altas dimensiones, replicando los cálculos y desglosando los pasos conceptuales con importancia física , concentrándose en las ideas de Popescu et al; revisar detenidamente los cálculos e ideas nuevas  sobre las aplicaciones de la termodinámica en sistemas fuera de equilibrio dadas por la teoría de la información cuántica, comparando con los avances teóricos  hechos en años anteriores  sin estas herramientas,
+En este sentido, se trata de vislumbrar las ideas sobre la esencia de la formulación estadística según la tipicidad canónica de estados cuánticos de espacios  de Hilbert  de altas dimensiones, replicando los cálculos y desglosando los pasos conceptuales con importancia física , concentrándose en las ideas de Popescu \textit{et al}; revisar detenidamente los cálculos e ideas nuevas  sobre las aplicaciones de la termodinámica en sistemas fuera de equilibrio dadas por la teoría de la información cuántica, comparando con los avances teóricos  hechos en años anteriores  sin estas herramientas,
 \\
 Es así como de manera puntual, en el primer capítulo se esboza primero algunas ideas generales haciendo un breve recuento histórico desde la termodinámica, la teoría cinética, luego los fundamentos de la mecánica estadística desde la perspectiva de Boltzmann y Gibbs; después  el ensamble canónico, el teorema de Liouville  y sus consecuencias, la ergocidad  y finalmente ,el principio de máxima entropía de Jaynes     
 \\
