--- a/Capitulos/introduccion.tex
+++ b/Capitulos/introduccion.tex
@@ -3,23 +3,23 @@
 
 La mecánica estadística muestra gran poder para comprender los fenómenos causados por sistemas de muchas partículas. Las predicciones teóricas concuerdan con los experimentos, pero el marco teórico en el que se fundamenta tiene problemas conceptuales que dejan a la teoría en un cimiento débil.  Para exhibir las incongruencias internas de los fundamentos, se exploran las ideas de Boltzmann y de Gibbs, porque sus enfoques tienen un gran impacto en la creación del marco conceptual de la mecánica estadística.
 \\ 
-En la época de Botlzmann se encontraba la termodinámica como una teoría establecida, no se tenían una óptica donde se le diera significado microscópico a la termodinámica. Boltzmann, buscando una conexión entre la termodinámica y  el mundo microscópico, plantea el teorema H. Este teorema muestra que al pasar el tiempo la función H decrece. La relación con la entropía termodinámica se da al multiplicar la función H por una constante -K, entonces se tiene que la entropía aumenta con el tiempo \cite{Ehrenfest}. El problema con la formulación hecha por Boltzmann, según Jaynes, es que la función H solo entrega la entropía termodinámica  cuando no hay interacción entre partículas.
+En la época de Botlzmann la termodinámica se consideraba una teoría establecida, no se le daba un significado microscópico. Boltzmann, buscando una conexión entre la termodinámica y  el mundo microscópico, plantea el teorema H. Este teorema muestra que al pasar el tiempo la función H decrece. La relación con la entropía termodinámica se da al multiplicar la función H por una constante -K, entonces se tiene que la entropía aumenta con el tiempo \cite{Ehrenfest}. Según Jaynes, el problema con la formulación de Boltzmann es que la función H solo entrega la entropía termodinámica  cuando no hay interacción entre partículas.
 \\
-Unos años después, Gibbs postuló su noción de ensambles. Jaynes muesta que la entropía de Gibbs, para todos los casos, es la entropía termodinámica. Aunque sus resultados concuerden con la termodinámica, la entropía de Gibbs no puede dar explicación a la flecha del tiempo, porque esta entropía se conserva a diferencia de la de Boltzmann. Pese a esto el enfoque de Gibbs se muestra poderoso para resolver muchos problemas, pero Gibbs no explicó ¿cómo es posible hablar de un ensamble de posbiles estados microscópicos, estando en un solo estado microscópico? En la literatura se resuelve esta pregunta usando la hipótesis ergódica. Esto acarrea problemas porque no todos los sistemas son ergódicos; y el tiempo para que sistemas ergódicos pasen por todo el espacio son extremadamente grandes. 
+Unos años después, Gibbs postuló su noción de ensambles. Jaynes muesta que la entropía de Gibbs, para todos los casos, es la entropía termodinámica. Aunque sus resultados concuerden con la termodinámica, la entropía de Gibbs no puede dar explicación a la flecha del tiempo, porque esta entropía se conserva a diferencia de la de Boltzmann. Pese a esto el enfoque de Gibbs se muestra poderoso para resolver muchos problemas, pero Gibbs no explicó ¿cómo es posible hablar de un ensamble de posbiles estados microscópicos, estando en un solo estado microscópico? En la literatura se resuelve esta pregunta usando la hipótesis ergódica, lo cual acarrea problemas porque no todos los sistemas son ergódicos; y el tiempo para que sistemas ergódicos pasen por todo el espacio es extremadamente grande. 
 \\
-Partiendo de los planteamientos realizados por Popescu, Short y Winter, en el artículo “Entanglement and the foundations of statistical mechanics” \cite{Popescu2006}. Donde se estudia la idea de tipicidad canónica con herramientas de la teoría de la información cuántica. Argumentando que cuando se tiene un sistema cuántico aislado compuesto por el subsistema y el ambiente, siendo el ambiente mucho más grande que el subsistema, se asegura que, aunque se tenga un estado puro de todo el sistema cuántico el subsistema se comportará como si el sistema estuviese en un estado máximamente mezclado. El autor formaliza esta idea dando unas cotas sobre la probabilidad de que haya un subsistema que no se comporte como un estado canónico. Estas cotas decaen de manera exponencial con respecto a la dimensión del sistema. Entonces se postula un nuevo principio, el principio de probabilidades iguales aparentes; por lo tanto, el subsistema tiene la misma probabilidad de estar en cualquier estado admisible aunque se llegue a conocer todo lo posible sobre el estado del sistema.
+Partiendo de los planteamientos realizados por Popescu, Short y Winter, en el artículo “Entanglement and the foundations of statistical mechanics” \cite{Popescu2006} -donde se estudia la idea de tipicidad canónica con herramientas de la teoría de la información cuántica- cuando se tiene un sistema cuántico aislado compuesto por el subsistema y el ambiente, siendo el ambiente mucho más grande que el subsistema, se asegura que, aunque se tenga un estado puro de todo el sistema cuántico, el subsistema se comportará como si el sistema estuviese en un estado máximamente mezclado. Los autores formalizan esta idea dando unas cotas sobre la probabilidad de que haya un subsistema que no se comporte como un estado canónico. Estas cotas decaen de manera exponencial con respecto a la dimensión del sistema, con lo que se postula un nuevo principio, el principio de probabilidades iguales aparentes. Así, el subsistema tiene la misma probabilidad de estar en cualquier estado admisible aunque se llegue a conocer todo lo posible sobre el estado del sistema.
 \\
-Por otra parte, los planteamientos igualmente presentados por los mismos autores junto con  Linden en el artículo “Quantum mechanical evolution towards thermal equilibrium” \cite{LindenPaper}  donde se expone en base a la tipicidad canónica cómo los sistemas llegan al equilibrio; partiendo de la explicación sobre qué significa que un sistema llegue al equilibrio, manifestando  que un sistema se dice estar en equilibrio cuando pasa mucho tiempo cerca de un estado particular. También se necesita una condición de independencia sobre el estado inicial del ambiente y el estado inicial del subsistema, porque el estado de equilibrio no debe depender de las condiciones iniciales que tenga el sistema.  La formulación matemática exhibida en este artículo muestra que los estados genéricos y los estados fuera del equilibrio, del subsistema, llegan a termalizarse a un estado específico, siendo este estado el promedio temporal del estado del subsistema.
+Por otra parte, los mismos autores junto con Linden en el artículo “Quantum mechanical evolution towards thermal equilibrium” \cite{LindenPaper} exponen en base a la tipicidad canónica cómo los sistemas llegan al equilibrio -lo cual significa que el sistema pasa mucho tiempo cerca de un estado particular-, intentando demostrar matemáticamente la condición de independencia sobre el estado inicial del ambiente y el estado inicial del subsistema, ya que el estado de equilibrio no debe depender de las condiciones iniciales del sistema. La formulación matemática exhibida en este artículo muestra que los estados genéricos y los estados fuera del equilibrio del subsistema, llegan a termalizarse a un estado específico, siendo este estado el promedio temporal del estado del subsistema.
 \\
-Desde este horizonte de sentido, en el presente trabajo, se realizará una revisión crítica del estado del arte de las ideas modernas que han dado lugar a una reformulación de los fundamentos estadísticos de la termodinámica a partir de las herramientas que proporciona la teoría de la información cuántica; así mismo, se consideran algunos ejemplos de aplicaciones de estas formulaciones a sistemas lejos del equilibrio.
+Desde este horizonte de sentido, en el presente trabajo se realizará una revisión crítica del estado del arte de las ideas modernas que han dado lugar a una reformulación de los fundamentos estadísticos de la termodinámica a partir de las herramientas que proporciona la teoría de la información cuántica. Asimismo, se consideran algunos ejemplos de aplicaciones de estas formulaciones a sistemas lejos del equilibrio.
 \\
-En este sentido, se trata de vislumbrar las ideas sobre la esencia de la formulación estadística según la tipicidad canónica de estados cuánticos de espacios  de Hilbert  de altas dimensiones, replicando los cálculos y desglosando los pasos conceptuales con importancia física , concentrándose en las ideas de Popescu \textit{et al}; revisar detenidamente los cálculos e ideas nuevas  sobre las aplicaciones de la termodinámica en sistemas fuera de equilibrio dadas por la teoría de la información cuántica, comparando con los avances teóricos  hechos en años anteriores  sin estas herramientas,
+En este sentido, se trata de vislumbrar las ideas sobre la esencia de la formulación estadística según la tipicidad canónica de estados cuánticos en espacios de Hilbert de altas dimensiones, replicando los cálculos y desglosando los pasos conceptuales con importancia física según las ideas de Popescu \textit{et al}; revisar detenidamente los cálculos e ideas nuevas  sobre las aplicaciones de la termodinámica en sistemas fuera de equilibrio dadas por la teoría de la información cuántica, comparando con los avances teóricos previos a estas herramientas.
 \\
-Es así como de manera puntual, en el primer capítulo se esboza primero algunas ideas generales haciendo un breve recuento histórico desde la termodinámica, la teoría cinética, luego los fundamentos de la mecánica estadística desde la perspectiva de Boltzmann y Gibbs; después  el ensamble canónico, el teorema de Liouville  y sus consecuencias, la ergocidad  y finalmente ,el principio de máxima entropía de Jaynes     
+En el primer capítulo se esbozan, en primer lugar, algunas ideas generales haciendo un breve recuento histórico de la termodinámica y la teoría cinética; luego, los fundamentos de la mecánica estadística desde la perspectiva de Boltzmann y Gibbs; después,  el ensamble canónico, el teorema de Liouville  y sus consecuencias, y la ergocidad  y, finalmente, el principio de máxima entropía de Jaynes.     
 \\
-En el segundo capítulo, se plantea en una primera instancia el entrelazamiento y la mecánica estadística. Posteriormente se mostrarán las herramientas de la teoría cuántica, luego el operador de densidad y operador de densidad reducida, después, distancia de traza, algunas definiciones, la idea conceptual, la formulación matemática, el lema de Levy, la demostración del principio general canónico y por último el significado físico.
+En el segundo capítulo, se plantean, en una primera instancia, el entrelazamiento y la mecánica estadística. Posteriormente se mostrarán las herramientas de la teoría cuántica; luego, el operador de densidad, el operador de densidad reducida y la distancia de traza; después, algunas definiciones, la idea conceptual, la formulación matemática del entrelazamiento y la mecánica estadística. Finalmente, se expondrán el lema de Levy, la demostración del principio general canónico y por último, su significado físico.
 \\
-En el tercer capítulo se presenta primero la evolución hacia el equilibrio, luego la especificación del equilibrio para terminar con la equilibración de los sistemas.
+En el tercer capítulo se presentan, primero, la evolución hacia el equilibrio, luego, la especificación del equilibrio, y se termina con la equilibración de los sistemas.
 \\
 Finalmente se presentan algunas conclusiones, producto del desarrollo del presente trabajo. 
 %\\
